--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <p><span id="n2">0</span> </p>
         <p><span id="n3">0</span> </p>
         <p id ="gato"> <br> El dígito restante, en este caso: <span id="nota"> 0 </span> 
-            debe de ajustarse considerando que cada rayita 
-        <p id= "gato2"> debajo del ultimo digito equivale a <span id="rayita"> 0 </span> microlitros </p> </p>
+            debe de ajustarse 
+        <p id= "gato2"> considerando que cada rayita debajo del ultimo digito equivale a <span id="rayita"> 0 </span> microlitros </p> </p>
         <br>
         
         
