--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <br>
         
         
-        <button onclick="micropipetas()">Calcular</button>
+        <button onclick="micropipetas()" id="boton">Calcular</button>
     </div>
     <script src="micropipetas.js"></script>
 
